--- a/src/templates/gameCube.hbs
+++ b/src/templates/gameCube.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
   <li class="game-board__item" style="grid-column: {{coords.[0]}} / span {{span}};
   grid-row: {{coords.[1]}} / span {{span}};
-  background-color: {{color}};"
+  background-color: {{color}};" data-id="{{id}}" data-filled="{{filledCoords}}"
   ></li>
 {{/each}}
