--- a/src/scss/components/gameBoard.scss
+++ b/src/scss/components/gameBoard.scss
@@ -1,6 +1,6 @@
 .game-board {
-  width: 28/39 * 100%;
-  height: 80%;
+  //width: 28/39 * 100%;
+  height: 100%;
   display: grid;
   grid-gap: 0.5%;
   grid-template-rows: repeat(20, 1fr);
